--- a/pages/index.module.scss
+++ b/pages/index.module.scss
@@ -118,22 +118,30 @@
 
 .header {
   height: 65px;
-
-  // border: 1px solid red;
   display: flex;
-  position: fixed;
-  right: 0;
-  top: 0;
+  // position: fixed;
+  // right: 0;
+  // top: 0;
   width: 100%;
   align-items: center; /** 垂直置中 */
   justify-content: center; /** 水平置中 */
-  background-color: gray;
+  // background-color: black;
 }
 
 .nav {
   width: 100%;
+  height: 100%;
   display: flex;
+  align-items: center;
   justify-content: space-between;
+  color: #eaeaea;
+  border: 1px solid red;
+  background-color: rgba(239, 238, 237);
+  .WebLogo {
+    img {
+      height: 90%;
+    }
+  }
 }
 
 .navMenu {
@@ -150,4 +158,8 @@
   .navMenu {
     display: none;
   }
+}
+
+.footer {
+  border: 1px solid red;
 }
