--- a/styles/global.scss
+++ b/styles/global.scss
@@ -6,6 +6,8 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 a {
+  height: 100%;
+  width: 100%;
   color: inherit;
   text-decoration: none;
 }
@@ -21,3 +23,10 @@ li {
   list-style: none;
   display: flex;
 }
+
+// img {
+//   border: 1px solid red;
+//   // flex: auto;
+//   height: 100%;
+//   // width: 100%;
+// }
