--- a/pages/home.module.scss
+++ b/pages/home.module.scss
@@ -2,15 +2,15 @@
   padding: 0 2rem;
 }
 
-.main {
-  min-height: 100vh;
-  padding: 4rem 0;
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
+// .main {
+//   min-height: 100vh;
+//   padding: 4rem 0;
+//   flex: 1;
+//   display: flex;
+//   flex-direction: column;
+//   justify-content: center;
+//   align-items: center;
+// }
 
 .footer {
   display: flex;
@@ -149,13 +149,33 @@
   display: flex;
   justify-content: space-around;
 }
-.body {
-  height: 1500px;
-}
 
 /** navMenu RWD */
 @media (max-width: 899px) {
   .navMenu {
     display: none;
   }
+}
+
+.body {
+  height: 1500px;
+  // border: 1px solid red;
+}
+.mainImage {
+  border: 1px solid green;
+  padding: 0;
+  margin: 0;
+  img {
+    width: 100%;
+    padding: 0%;
+    // object-fit: contain;
+    object-fit: fill;
+    vertical-align: middle;
+  }
+}
+.main {
+  border: 1px solid red;
+  padding: 20px;
+  width: 100%;
+  height: 100px;
 }
