--- a/pages/home.module.scss
+++ b/pages/home.module.scss
@@ -19,7 +19,6 @@
   border-top: 1px solid #eaeaea;
   justify-content: center;
   align-items: center;
-  // border: 1px solid red;
 }
 
 .footer a {
@@ -178,4 +177,13 @@
   padding: 20px;
   width: 100%;
   height: 100px;
+}
+
+.posterWrapper {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  .poster {
+    width: 100px;
+  }
 }
