--- a/pages/home.module.scss
+++ b/pages/home.module.scss
@@ -116,6 +116,7 @@
 }
 
 .header {
+  // border: 5px solid green;
   height: 65px;
   display: flex;
   // position: fixed;
@@ -124,39 +125,7 @@
   width: 100%;
   align-items: center; /** 垂直置中 */
   justify-content: center; /** 水平置中 */
-  // background-color: black;
-}
-
-.nav {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  color: black;
-  background-color: rgba(239, 238, 237);
-  .WebLogo {
-    border: 1px solid red;
-    .test {
-      border: 1px solid green;
-      height: 65px;
-      width: 130px;
-      position: relative;
-    }
-  }
-}
-
-.navMenu {
-  width: 100%;
-  display: flex;
-  justify-content: space-around;
-}
-
-/** navMenu RWD */
-@media (max-width: 899px) {
-  .navMenu {
-    display: none;
-  }
+  flex-direction: column;
 }
 
 .body {
@@ -176,15 +145,13 @@
   }
 }
 .main {
-  border: 1px solid red;
+  border: 3px solid red;
   padding: 20px;
   width: 100%;
-  height: 100px;
 }
 
 .posterWrapper {
   border: 1px solid green;
-
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
