--- a/pages/logicQuestions.module.scss
+++ b/pages/logicQuestions.module.scss
@@ -54,12 +54,11 @@
   backdrop-filter: blur(1px);
 }
 .alertBox {
-  // border: 2px solid red;
   margin: 50% auto;
+  padding: 16px 0;
   background-color: #ffffff;
   width: 70%;
   border-radius: 10px;
-  padding: 16px;
   display: flex;
   flex-direction: column;
   align-items: center;
