--- a/pages/logicQuestions.module.scss
+++ b/pages/logicQuestions.module.scss
@@ -10,9 +10,12 @@
 }
 
 .questionBlock {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
   box-shadow: 0 5px 20px rgb(0 0 0 / 7%);
   padding: 16px;
-
   .question {
     color: #333333;
     font-weight: 700;
@@ -72,6 +75,9 @@
 }
 
 .button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 80%;
   min-width: 100px;
   text-align: center;
@@ -91,23 +97,83 @@
 }
 
 .page2Content {
-  border: 1px solid green;
+  // border: 1px solid green;
 }
 
 .card {
   // border: 1px solid red;
   position: relative;
+  margin: 10px 10px;
+  padding: 10px;
+  box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.25);
+  border-radius: 5px;
+
+  // to ease the button growth on hover
+  transition: 1s;
+
+  &::before {
+    content: "";
+    display: block;
+    position: absolute;
+    background: rgba(255, 255, 255, 0.5);
+    width: 60px;
+    height: 100%;
+    top: 0;
+    filter: blur(30px);
+    transform: translateX(-100px) skewX(-15deg);
+  }
+
+  &::after {
+    content: "";
+    display: block;
+    position: absolute;
+    background: rgba(255, 255, 255, 0.2);
+    width: 30px;
+    height: 100%;
+    top: 0;
+    filter: blur(5px);
+    transform: translateX(-100px) skewX(-15deg);
+  }
+
+  &:hover {
+    &::before,
+    &::after {
+      transform: translateX(700px) skewX(-15deg);
+      transition: 4s;
+    }
+  }
 }
 
 div.card:nth-child(even) {
-  // position: absolute;
-  // left: -10%;
-  background: black;
   background: radial-gradient(#1fe4f5, #3fbafe);
+
+  left: 50px;
+  animation-name: rightFlyIn;
+  animation-duration: 3s;
 }
+
 div.card:nth-child(odd) {
-  // position: absolute;
-  // left: 10%;
-  background: red;
   background: radial-gradient(#60efbc, #58d5c9);
+
+  left: -50px;
+  animation-name: leftFlyIn;
+  animation-duration: 3s;
+}
+
+@keyframes leftFlyIn {
+  from {
+    left: -100%;
+  }
+  to {
+    left: -50px;
+  }
+}
+
+@keyframes rightFlyIn {
+  from {
+    left: 100%;
+  }
+  to {
+    left: 50px;
+  }
 }
