--- a/pages/logicQuestions.module.scss
+++ b/pages/logicQuestions.module.scss
@@ -10,6 +10,7 @@
 }
 
 .questionBlock {
+  width: 100%;
   box-shadow: 0 5px 20px rgb(0 0 0 / 7%);
   padding: 16px;
 
@@ -91,12 +92,21 @@
 }
 
 .page2Content {
-  border: 1px solid green;
+  border: 1px solid yellow;
+  width: 100%;
 }
 
-.card {
-  // border: 1px solid red;
+.cardContainer {
+  border: 1px solid red;
+  width: 80%;
+  height: 50px;
   position: relative;
+  .card {
+    border: 1px solid green;
+    position: absolute;
+    // left: 50px;
+    border-radius: 5px;
+  }
 }
 
 div.card:nth-child(even) {
