--- a/pages/logicQuestions.module.scss
+++ b/pages/logicQuestions.module.scss
@@ -107,8 +107,10 @@
   padding: 10px;
   box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.25);
   border-radius: 5px;
-  transition: 1s;
+  transition: 0.5s;
+  opacity: 0;
 
+  /** 閃爍 */
   &::before {
     content: "";
     display: block;
@@ -118,7 +120,7 @@
     height: 100%;
     top: 0;
     filter: blur(30px);
-    transform: translateX(-100px) skewX(-15deg);
+    transform: translateX(-100px) skewX(-50deg);
   }
 
   &::after {
@@ -130,14 +132,14 @@
     height: 100%;
     top: 0;
     filter: blur(5px);
-    transform: translateX(-100px) skewX(-15deg);
+    transform: translateX(-100px) skewX(-50deg);
   }
 
   &:hover {
     &::before,
     &::after {
       transform: translateX(700px) skewX(-15deg);
-      transition: 4s;
+      transition: 2s;
     }
   }
 }
