--- a/pages/logicQuestions.module.scss
+++ b/pages/logicQuestions.module.scss
@@ -165,11 +165,11 @@ div.card:nth-child(odd) {
 
 @keyframes leftFlyIn {
   from {
-    opacity: 0;
+    // opacity: 0;
     left: -100%;
   }
   to {
-    opacity: 1;
+    // opacity: 1;
     left: -50px;
   }
 }
