--- a/pages/PuzzleGame.module.scss
+++ b/pages/PuzzleGame.module.scss
@@ -1,16 +1,78 @@
+// Flex  空間分配
+// https://ithelp.ithome.com.tw/articles/10208741#_=_
+// flex: flex-grow / flex-shrink / flex-basis
+
 .container {
+  box-sizing: border-box;
   padding: 4rem 2rem;
   min-height: 100vh;
   flex: 1;
   display: flex;
-  flex-direction: row;
-
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  position: relative;
+  * {
+    box-sizing: border-box;
+  }
+}
+
+.containerByRow {
+  display: flex;
+  // border: 1px solid green;
+  flex-direction: row;
+  min-width: 300px;
+  width: 60%;
+}
+
+.boxWrapper {
+  box-sizing: border-box;
+
+  // border: 1px solid orange;
+  display: flex;
+  flex: 3 1 75%;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.rowSumWrapper {
+  box-sizing: border-box;
+  // border: 4px solid orange;
+  display: flex;
+  flex: 1 0 25%;
+  flex-direction: column;
+  // flex-wrap: wrap;
 }
 .box {
-  border: 1px solid red;
-  width: 100px;
-  height: 100px;
+  // border: 1px solid red;
+  // width: 20%;
+  // height: 100px;
+  flex: 1 1 30%;
+  display: flex;
+  // border: 1px solid red;
+  aspect-ratio: 1/1;
+  justify-content: center;
+  align-items: center;
+  div {
+    width: 95%;
+    height: 95%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    border-radius: 10px;
+    background-color: green;
+  }
+}
+.boxStyle {
+  // paddin: 10px;
+  // border: 1px solid red;
+  background-clip: content-box;
+}
+.columnSumWrapper {
+  // border: 1px solid blue;
+  display: flex;
+  flex-direction: row;
+
+  flex: 1 1 auto;
 }
