--- a/pages/PuzzleGame.module.scss
+++ b/pages/PuzzleGame.module.scss
@@ -60,19 +60,23 @@
     justify-content: center;
     align-items: center;
     color: white;
+    font-size: 3rem;
     border-radius: 10px;
-    background-color: green;
+    // background-color: green;
+    &.orange {
+      background-color: #fda349;
+    }
+    &.green {
+      background-color: #cae76b;
+    }
+    &.yellow {
+      background-color: #eece75;
+    }
   }
 }
-.boxStyle {
-  // paddin: 10px;
-  // border: 1px solid red;
-  background-clip: content-box;
-}
+
 .columnSumWrapper {
-  // border: 1px solid blue;
   display: flex;
   flex-direction: row;
-
   flex: 1 1 auto;
 }
