--- a/pages/PuzzleGame.module.scss
+++ b/pages/PuzzleGame.module.scss
@@ -67,7 +67,7 @@
       background-color: #fda349;
     }
     &.green {
-      background-color: #cae76b;
+      background-color: #77e76b;
     }
     &.yellow {
       background-color: #eece75;
