1. bug fix 2. css fix

--- a/pages/PuzzleGame.module.scss
+++ b/pages/PuzzleGame.module.scss
@@ -1,6 +1,8 @@
-// Flex  空間分配
+// Flex 空間分配
 // https://ithelp.ithome.com.tw/articles/10208741#_=_
 // flex: flex-grow / flex-shrink / flex-basis
+
+// https://www.casper.tw/css/2017/07/21/css-flex/
 
 .container {
   box-sizing: border-box;
