--- a/pages/logicQuestions.module.scss
+++ b/pages/logicQuestions.module.scss
@@ -163,7 +163,7 @@ div.card:nth-child(odd) {
     left: -100%;
   }
   to {
-    // opacity: 1;
+    opacity: 0.8;
     left: -50px;
   }
 }
@@ -174,7 +174,7 @@ div.card:nth-child(odd) {
     left: 100%;
   }
   to {
-    // opacity: 1;
+    opacity: 0.8;
     left: 50px;
   }
 }
