--- a/pages/cardGame.module.scss
+++ b/pages/cardGame.module.scss
@@ -1,62 +1,58 @@
 .container {
+  position: relative;
   box-sizing: border-box;
-  padding: 4rem 2rem;
-  min-height: 100vh;
-  flex: 1;
+  padding: auto 2rem;
+  // min-height: 70vh;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: center;
   align-items: center;
-  // * {
-  //   box-sizing: border-box;
-  // }
+  flex-wrap: wrap;
 }
 
 .card {
+  display: flex;
   position: relative;
-  display: flex;
-  width: 70px;
-  height: 70px;
-  background-color: orange;
-  // opacity: 0;
-  // transform: rotateY(180deg);
-  visibility: hidden;
+  // min-width: 100px;
+  // min-height: 150px;
+  aspect-ratio: 2/3; /* 寬/長 */
+  margin: 10px;
+  flex: 1 1 25%;
+  transform: perspective(1000px);
+  perspective: 1000px; /* 立體透視深度 */
 }
 
-.card::after {
-  position: absolute;
-  display: flex;
-  background-color: green;
-  // transform: rotateY(-180deg);
-  content: "2";
-  width: 70px;
-  height: 70px;
-  // opacity: 1;
-  visibility: visible;
+.front,
+.back {
+  width: 100%;
+  height: 100%;
+  position: absolute; /* 絕對定位使兩個div重疊 */
+  backface-visibility: hidden; /* 元素背後不可看見 */
+  transition: 1.75s; /*動畫時間 1.5秒*/
 }
-.clickCard {
-  visibility: visible;
-}
-.clickCard::after {
-  visibility: hidden;
-}
-// .card,
-// .card::after:hover {
-//   // transform: rotateY(0deg);
-//   backface-visibility: hidden;
-//   // transform: rotateY(-180deg);
-//   transition: transform 1s;
-//   transform: rotateY(0deg);
-//   transform-style: preserve-3d;
-// }
 
-// .card:hover,
-// .card::after {
-//   transform: rotateY(180deg);
-//   backface-visibility: hidden;
-//   transition: transform 1s;
-//   transform-style: preserve-3d;
-// }
+.front {
+  transform: rotateY(0deg);
+  /** background: color image attachment repeat poition / size */
+  /** background教學: https://ithelp.ithome.com.tw/articles/10250499 */
+  background: red url("../static/OnePiece/OnePieceCover.jpeg") no-repeat center /
+    cover;
+}
+
+.back {
+  // background-color: blue;
+  color: white;
+  /*設定-180deg即是將back翻到背面（背面看不到，因為設定了 backface-visibility: hidden;）*/
+  transform: rotateY(-180deg);
+}
+
+.clickCard .front {
+  transform: rotateY(180deg); /*當hover時，front從正面轉到背面*/
+}
+
+.clickCard .back {
+  transform: rotateY(0deg); /*當hover時，back從背面轉到正面*/
+}
 
 //https://codepen.io/kayfo23/pen/KoZOzB
 // https://freefrontend.com/css-flip-cards/
