--- a/pages/cardGame.module.scss
+++ b/pages/cardGame.module.scss
@@ -45,8 +45,8 @@
   transform: rotateY(0deg);
   /** background: color image attachment repeat poition / size */
   /** background教學: https://ithelp.ithome.com.tw/articles/10250499 */
-  background: grey url("../static/OnePiece/OnePieceCover.jpeg") no-repeat center /
-    cover;
+  background: #c25a48 url("../static/OnePiece/OnePieceCover.jpeg") no-repeat
+    center / 90% 90%;
 }
 
 .back {
