--- a/pages/cardGame.module.scss
+++ b/pages/cardGame.module.scss
@@ -65,6 +65,10 @@
   transform: rotateY(0deg); /*當hover時，back從背面轉到正面*/
 }
 
+.matchStyle {
+  opacity: 0;
+}
+
 //https://codepen.io/kayfo23/pen/KoZOzB
 // https://freefrontend.com/css-flip-cards/
 // https://freefrontend.com/css-cards/
