--- a/pages/logicQuestions.module.scss
+++ b/pages/logicQuestions.module.scss
@@ -1,5 +1,6 @@
+//
+
 .container {
-  padding: 4rem 2rem;
   min-height: 100vh;
   flex: 1;
   display: flex;
@@ -11,10 +12,14 @@
 
 .questionBlock {
   display: flex;
+  min-width: 360px;
+  max-width: 500px;
+  height: 100vh;
   flex-direction: column;
   align-items: center;
   box-shadow: 0 5px 20px rgb(0 0 0 / 7%);
   padding: 16px;
+  overflow: hidden;
   .question {
     color: #333333;
     font-weight: 700;
@@ -42,7 +47,6 @@
       color: white;
     }
   }
-  max-width: 500px;
 }
 
 .alertModal {
@@ -74,6 +78,11 @@
   // margin: 16px auto;
 }
 
+.pageLayout {
+  margin: auto;
+  // border: 2px solid blue;
+}
+
 .button {
   display: flex;
   justify-content: center;
@@ -97,7 +106,6 @@
 }
 
 .card {
-  // border: 1px solid red;
   border-radius: 5px;
   position: relative;
   margin: 10px 10px;
@@ -147,7 +155,7 @@ div.card:nth-child(even) {
 
   animation-name: rightFlyIn;
   animation-duration: 1.5s;
-  left: 50px;
+  left: 10px;
 }
 
 div.card:nth-child(odd) {
@@ -155,7 +163,7 @@ div.card:nth-child(odd) {
 
   animation-name: leftFlyIn;
   animation-duration: 1.5s;
-  left: -50px;
+  left: -10px;
 }
 
 @keyframes leftFlyIn {
