--- a/pages/logicQuestions.module.scss
+++ b/pages/logicQuestions.module.scss
@@ -12,7 +12,7 @@
 
 .questionBlock {
   display: flex;
-  min-width: 360px;
+  width: 100vw;
   max-width: 500px;
   height: 100vh;
   flex-direction: column;
@@ -75,12 +75,10 @@
 .icon {
   width: 100px;
   margin-bottom: 16px;
-  // margin: 16px auto;
 }
 
 .pageLayout {
   margin: auto;
-  // border: 2px solid blue;
 }
 
 .button {
@@ -113,6 +111,7 @@
   box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.25);
   border-radius: 5px;
   transition: 2s;
+  font-size: 12px;
   opacity: 0;
   animation-delay: 999s;
 
