--- a/components/Modal/Modal.module.scss
+++ b/components/Modal/Modal.module.scss
@@ -1,50 +1,23 @@
-.nav {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  color: black;
-  background-color: rgba(239, 238, 237);
-  .WebLogo {
-    .test {
-      padding: 5px;
-      height: 65px;
-      width: 130px;
-      position: relative;
-    }
-  }
-}
-
-.navMenu {
-  width: 100%;
-  display: flex;
-  justify-content: space-around;
-}
-
-/** navMenu RWD */
-@media (max-width: 899px) {
-  .navMenu {
-    display: none;
-  }
-}
-
-.panel {
-  position: relative;
-  width: 100%;
+.alertModal {
   display: none;
-  .panelWrapper {
-    position: absolute;
-    width: 100%;
-    z-index: 1;
-    background-color: rgb(239, 238, 237);
-    display: flex;
-    flex-direction: column;
-    align-items: stretch;
-    .panelList {
-      padding: 5px 0;
-      display: flex;
-      text-align: center;
-    }
-  }
+  position: fixed;
+  height: 100vh;
+  width: 100%;
+  z-index: 1;
+  background-color: rgba(0, 0, 0, 0.5);
+  /** 毛玻璃效果 */
+  backdrop-filter: blur(1px);
+  align-items: center;
+  justify-content: center;
+}
+
+.alertBox {
+  margin: 0 auto;
+  padding: 16px 0;
+  background-color: #ffffff;
+  width: 70%;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
