--- a/pages/cardGame.module.scss
+++ b/pages/cardGame.module.scss
@@ -1,14 +1,13 @@
 .container {
-  position: relative;
-  box-sizing: border-box;
-  padding: 2rem;
   min-height: 100vh;
+  flex: 1;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  flex-wrap: wrap;
+  position: relative;
 }
+
 .playground {
   width: 100%;
   max-width: 500px;
