--- a/pages/logicQuestions.module.scss
+++ b/pages/logicQuestions.module.scss
@@ -14,9 +14,10 @@
   display: flex;
   width: 100vw;
   max-width: 500px;
-  height: 100vh;
+  height: 100dvh;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   box-shadow: 0 5px 20px rgb(0 0 0 / 7%);
   padding: 16px;
   overflow: hidden;
